# RAGOps_exam_repo

./: Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: requirements.txt
backend/app/: main.py
backend/app/api/: batch_ingest.py  metadata.py  pdf.py
backend/app/core/: config.py
backend/app/eval/: ragas_eval.py
backend/app/models/: chat.py
backend/app/services/: db.py  embeddings.py  llm_service.py  minio_client.py  pdf_processor.py  rerank_service.py
db/: init.sql
tests/: test_metadata.py
